syntax = "proto3";

option java_multiple_files = true;
option java_package = "games.mythical.proto_util.util.simple";

package proto_util.util.simple;

message SimpleString {
  string value = 1;
}

message SimpleSnake {
  string a_var = 1;
}

message SimpleTypes {
  string str_value = 1;
  int32 int_value = 2;
  int64 big_int_value = 3;
  uint32 uint_value = 4;
  uint64 big_uint_value = 5;
  bool bool_value = 6;
  double double_value = 7;
}
